# prism-browser

./: .gitignore  README.md  build-prism.ps1
Prism/: App.cpp  BrowserPage.cpp  BrowserPage.h  Package.appxmanifest  Prism.sln  Prism.vcxproj  pch.h
webos/: REFERENCE.md  build-cairo.sh  build-expat.sh  build-ffmpeg.sh  build-fontconfig.sh  build-freetype.sh  build-glib-networking.sh  build-glib.sh  build-gmp.sh  build-gnutls.sh  build-gst-libav.sh  build-gst-palm-video-decoder.sh  build-gst-plugins-bad.sh  build-gst-plugins-base.sh  build-gst-plugins-good.sh  build-gstreamer.sh  build-harfbuzz.sh  build-icu.sh  build-libepoxy.sh  build-libffi.sh  build-libgcrypt.sh  build-libgpgerr.sh  build-libjpeg-turbo.sh  build-libpsl.sh  build-libsoup.sh  build-libtasn1.sh  build-libwebp.sh  build-libwpe.sh  build-libxml2.sh  build-nettle.sh  build-pixman.sh  build-prism-browser.sh  build-sqlite.sh  build-webkit-webos.sh  build-wpe-backend-sdl.sh  build-zlib.sh  deploy.sh  fast-push.sh  make-ipk.sh  meson-cross-webos.ini  (+2 more)
webos/bundle-extras/etc/fonts/: fonts.conf
webos/deploy/: install.sh  prism-media-perms.conf
webos/gst-palm-video-decoder/: meson.build
webos/gst-palm-video-decoder/src/: gstpalmvideodec.c  gstpalmvideodec.h
webos/gst-test/: gst-test.c
webos/host-tools/stubs/: icudata_stub.c  libicudata.so.67
webos/prism-browser/: CMakeLists.txt  home.html  main.c  test-images.html
webos/wpe-backend-sdl/: CMakeLists.txt
webos/wpe-backend-sdl/src/: backend-egl.c  backend-egl.h  keysym-map.h  loader.c  renderer-host.c  renderer-host.h  swap-hook.c  view-backend.c  view-backend.h
